--- a/Offers/templates/Index/edit_offer.html
+++ b/Offers/templates/Index/edit_offer.html
@@ -36,7 +36,7 @@
 
 
             <!-- FORMY DJANGO DO ZMIENIANIA DANYCH -->
-            <form method="post" enctype="multipart/form-data" action="{% url 'edit_offer' ids=offer.id %}">
+            <form method="post" enctype="multipart/form-data" action="">
                 <h2>Edit information</h2>
                 <br>
               {% csrf_token %}
