--- a/Offers/templates/Offers/jobs.html
+++ b/Offers/templates/Offers/jobs.html
@@ -111,12 +111,12 @@
                         <div class="col-md-6">
                             <div class="trainer-item">
                                 <div class="image-thumb">
-                                    {% with logo_dict|get_item:offer as image_static %}
+                                    {% with logo_dict|get_item:offer as image %}
 
-                                        {% if not image_static %}
+                                        {% if not image %}
                                             <img src="{% static 'images/logo_przykładowe.jpg' %}" alt="">
                                         {% else %}
-                                            <img src="{% static image_static %}" alt="">
+                                            <img src="{{ image.url }}" alt="">
                                         {% endif %}
                                     {% endwith %}
                                 </div>
