--- a/Offers/templates/Offers/search.html
+++ b/Offers/templates/Offers/search.html
@@ -111,14 +111,14 @@
                             <div class="col-md-6">
                                 <div class="trainer-item">
                                     <div class="image-thumb">
-                                        {% with logo_dict|get_item:offer as image_static %}
+                                        {% with logo_dict|get_item:offer as image %}
 
-                                            {% if not image_static %}
-                                                <img src="{% static 'images/logo_przykładowe.jpg' %}" alt="">
-                                            {% else %}
-                                                <img src="{% static image_static %}" alt="">
-                                            {% endif %}
-                                        {% endwith %}
+                                        {% if not image %}
+                                            <img src="{% static 'images/logo_przykładowe.jpg' %}" alt="">
+                                        {% else %}
+                                            <img src="{{ image.url }}" alt="">
+                                        {% endif %}
+                                    {% endwith %}
                                     </div>
                                     <div class="down-content">
                                         <span> <sup>$</sup> {{ offer.min_salary }} - {{offer.max_salary}} </span>
