--- a/Offers/templates/Offers/jobs.html
+++ b/Offers/templates/Offers/jobs.html
@@ -14,7 +14,7 @@
                         <br>
                         <br>
                         <h2>Our <em>Jobs</em></h2>
-                        <p>Ut consectetur, metus sit amet aliquet placerat, enim est ultricies ligula</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -134,115 +134,6 @@
                             </div>
                         </div>
                         {% endfor %}
-<!--                        <div class="col-md-6">-->
-<!--                            <div class="trainer-item">-->
-<!--                                <div class="image-thumb">-->
-<!--                                    <img src="{% static 'images/product-1-720x480.jpg' %}" alt="">-->
-<!--                                </div>-->
-<!--                                <div class="down-content">-->
-<!--                                    <span> <sup>$</sup>70 000 </span>-->
-
-<!--                                    <h4>Lorem ipsum dolor sit amet, consectetur</h4>-->
-
-<!--                                    <p>Medical &nbsp;/&nbsp; Health Jobs</p>-->
-
-<!--                                    <ul class="social-icons">-->
-<!--                                        <li><a href="job-details.html">+ View More</a></li>-->
-<!--                                    </ul>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="col-md-6">-->
-<!--                            <div class="trainer-item">-->
-<!--                                <div class="image-thumb">-->
-<!--                                    <img src="{% static 'images/product-2-720x480.jpg' %}" alt="">-->
-<!--                                </div>-->
-<!--                                <div class="down-content">-->
-<!--                                    <span> <sup>$</sup>70 000 </span>-->
-
-<!--                                    <h4>Lorem ipsum dolor sit amet, consectetur</h4>-->
-
-<!--                                    <p>Medical &nbsp;/&nbsp; Health Jobs</p>-->
-
-<!--                                    <ul class="social-icons">-->
-<!--                                        <li><a href="job-details.html">+ View More</a></li>-->
-<!--                                    </ul>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="col-md-6">-->
-<!--                            <div class="trainer-item">-->
-<!--                                <div class="image-thumb">-->
-<!--                                    <img src="{% static 'images/product-3-720x480.jpg' %}" alt="">-->
-<!--                                </div>-->
-<!--                                <div class="down-content">-->
-<!--                                    <span> <sup>$</sup>70 000 </span>-->
-
-<!--                                    <h4>Lorem ipsum dolor sit amet, consectetur</h4>-->
-
-<!--                                    <p>Medical &nbsp;/&nbsp; Health Jobs</p>-->
-
-<!--                                    <ul class="social-icons">-->
-<!--                                        <li><a href="job-details.html">+ View More</a></li>-->
-<!--                                    </ul>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-
-<!--                        <div class="col-md-6">-->
-<!--                            <div class="trainer-item">-->
-<!--                                <div class="image-thumb">-->
-<!--                                    <img src="{% static 'images/product-4-720x480.jpg' %}" alt="">-->
-<!--                                </div>-->
-<!--                                <div class="down-content">-->
-<!--                                    <span> <sup>$</sup>70 000 </span>-->
-
-<!--                                    <h4>Lorem ipsum dolor sit amet, consectetur</h4>-->
-
-<!--                                    <p>Medical &nbsp;/&nbsp; Health Jobs</p>-->
-
-<!--                                    <ul class="social-icons">-->
-<!--                                        <li><a href="job-details.html">+ View More</a></li>-->
-<!--                                    </ul>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="col-md-6">-->
-<!--                            <div class="trainer-item">-->
-<!--                                <div class="image-thumb">-->
-<!--                                    <img src="{% static 'images/product-5-720x480.jpg' %}" alt="">-->
-<!--                                </div>-->
-<!--                                <div class="down-content">-->
-<!--                                    <span> <sup>$</sup>70 000 </span>-->
-
-<!--                                    <h4>Lorem ipsum dolor sit amet, consectetur</h4>-->
-
-<!--                                    <p>Medical &nbsp;/&nbsp; Health Jobs</p>-->
-
-<!--                                    <ul class="social-icons">-->
-<!--                                        <li><a href="job-details.html">+ View More</a></li>-->
-<!--                                    </ul>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="col-md-6">-->
-<!--                            <div class="trainer-item">-->
-<!--                                <div class="image-thumb">-->
-<!--                                    <img src="{% static 'images/product-6-720x480.jpg' %}" alt="">-->
-<!--                                </div>-->
-<!--                                <div class="down-content">-->
-<!--                                    <span> <sup>$</sup>70 000 </span>-->
-
-<!--                                    <h4>Lorem ipsum dolor sit amet, consectetur</h4>-->
-
-<!--                                    <p>Medical &nbsp;/&nbsp; Health Jobs</p>-->
-
-<!--                                    <ul class="social-icons">-->
-<!--                                        <li><a href="job-details.html">+ View More</a></li>-->
-<!--                                    </ul>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
                     </div>
                 </div>
             </div>
@@ -250,27 +141,48 @@
             
 
             <br>
-                
+
             <nav>
               <ul class="pagination pagination-lg justify-content-center">
                 <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                  </a>
+                    {% if offers_list.has_previous %}
+                      <a class="page-link" href="?page={{ offers_list.previous_page_number }}" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                    {% endif %}
                 </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                {% if offers_list.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{ offers_list.previous_page_number }}">{{ offers_list.previous_page_number }}</a></li>
+
+                {% endif %}
+
+                    <li class="page-item"><a class="page-link" href="?page={{ offers_list.number }}">{{ offers_list.number }}</a></li> <!-- OBECNA -->
+
+                {% if offers_list.has_next %}
+                    <li class="page-item"><a class="page-link" href="?page={{ offers_list.next_page_number }}">{{ offers_list.next_page_number }}</a></li>
+
+                {% endif %}
+<!--                <li class="page-item"><a class="page-link" href="#">2</a></li>-->
+<!--                <li class="page-item"><a class="page-link" href="#">3</a></li>-->
+
                 <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
-                  </a>
+                    {% if offers_list.has_next %}
+                      <a class="page-link" href="?page={{ offers_list.next_page_number }}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                    {% endif %}
                 </li>
+
               </ul>
             </nav>
-
+<!--            {{ offers_list }}-->
+<!--            <br>-->
+<!--            poprzednie: {{ offers_list.has_previous }} <br>-->
+<!--            kolejne: {{ offers_list.has_next }} <br>-->
+<!--            obecna: {{ offers_list.number }} <br>-->
+<!--            ile jest stron: {{ offers_list.paginator.num_pages }}-->
         </div>
     </section>
     <!-- ***** Fleet Ends ***** -->
