--- a/Offers/templates/Offers/search.html
+++ b/Offers/templates/Offers/search.html
@@ -14,7 +14,7 @@
                         <br>
                         <br>
                         <h2>Our <em>Jobs</em></h2>
-                        <p>Ut consectetur, metus sit amet aliquet placerat, enim est ultricies ligula</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -152,20 +152,36 @@
             <nav>
               <ul class="pagination pagination-lg justify-content-center">
                 <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                    <span class="sr-only">Previous</span>
-                  </a>
+                    {% if offers_list.has_previous %}
+                      <a class="page-link" href="?page={{ offers_list.previous_page_number }}" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                    {% endif %}
                 </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                {% if offers_list.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{ offers_list.previous_page_number }}">{{ offers_list.previous_page_number }}</a></li>
+
+                {% endif %}
+
+                    <li class="page-item"><a class="page-link" href="?page={{ offers_list.number }}">{{ offers_list.number }}</a></li> <!-- OBECNA -->
+
+                {% if offers_list.has_next %}
+                    <li class="page-item"><a class="page-link" href="?page={{ offers_list.next_page_number }}">{{ offers_list.next_page_number }}</a></li>
+
+                {% endif %}
+<!--                <li class="page-item"><a class="page-link" href="#">2</a></li>-->
+<!--                <li class="page-item"><a class="page-link" href="#">3</a></li>-->
+
                 <li class="page-item">
-                  <a class="page-link" href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                    <span class="sr-only">Next</span>
-                  </a>
+                    {% if offers_list.has_next %}
+                      <a class="page-link" href="?page={{ offers_list.next_page_number }}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                    {% endif %}
                 </li>
+
               </ul>
             </nav>
 
