--- a/Offers/templates/Offers/search.html
+++ b/Offers/templates/Offers/search.html
@@ -152,30 +152,30 @@
             <nav>
               <ul class="pagination pagination-lg justify-content-center">
                 <li class="page-item">
-                    {% if offers_list.has_previous %}
-                      <a class="page-link" href="?page={{ offers_list.previous_page_number }}" aria-label="Previous">
+                    {% if offers2.has_previous %}
+                      <a class="page-link" href="?page={{ offers2.previous_page_number }}" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                         <span class="sr-only">Previous</span>
                       </a>
                     {% endif %}
                 </li>
-                {% if offers_list.has_previous %}
-                    <li class="page-item"><a class="page-link" href="?page={{ offers_list.previous_page_number }}">{{ offers_list.previous_page_number }}</a></li>
+                {% if offers2.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{ offers2.previous_page_number }}">{{ offers2.previous_page_number }}</a></li>
 
                 {% endif %}
 
-                    <li class="page-item"><a class="page-link" href="?page={{ offers_list.number }}">{{ offers_list.number }}</a></li> <!-- OBECNA -->
+                    <li class="page-item"><a class="page-link" href="?page={{ offers2.number }}">{{ offers2.number }}</a></li> <!-- OBECNA -->
 
-                {% if offers_list.has_next %}
-                    <li class="page-item"><a class="page-link" href="?page={{ offers_list.next_page_number }}">{{ offers_list.next_page_number }}</a></li>
+                {% if offers2.has_next %}
+                    <li class="page-item"><a class="page-link" href="?page={{ offers2.next_page_number }}">{{ offers2.next_page_number }}</a></li>
 
                 {% endif %}
 <!--                <li class="page-item"><a class="page-link" href="#">2</a></li>-->
 <!--                <li class="page-item"><a class="page-link" href="#">3</a></li>-->
 
                 <li class="page-item">
-                    {% if offers_list.has_next %}
-                      <a class="page-link" href="?page={{ offers_list.next_page_number }}" aria-label="Next">
+                    {% if offers2.has_next %}
+                      <a class="page-link" href="?page={{ offers2.next_page_number }}" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
                       </a>
