--- a/Offers/templates/Offers/jobs.html
+++ b/Offers/templates/Offers/jobs.html
@@ -106,7 +106,7 @@
                 <div class="col-lg-8">
                     <div class="row">
 
-                        {% for offer in offers_list %}
+                        {% for offer in offers_list2 %}
 
                         <div class="col-md-6">
                             <div class="trainer-item">
@@ -145,30 +145,30 @@
             <nav>
               <ul class="pagination pagination-lg justify-content-center">
                 <li class="page-item">
-                    {% if offers_list.has_previous %}
-                      <a class="page-link" href="?page={{ offers_list.previous_page_number }}" aria-label="Previous">
+                    {% if offers_list2.has_previous %}
+                      <a class="page-link" href="?page={{ offers_list2.previous_page_number }}" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                         <span class="sr-only">Previous</span>
                       </a>
                     {% endif %}
                 </li>
-                {% if offers_list.has_previous %}
-                    <li class="page-item"><a class="page-link" href="?page={{ offers_list.previous_page_number }}">{{ offers_list.previous_page_number }}</a></li>
+                {% if offers_list2.has_previous %}
+                    <li class="page-item"><a class="page-link" href="?page={{ offers_list2.previous_page_number }}">{{ offers_list2.previous_page_number }}</a></li>
 
                 {% endif %}
 
-                    <li class="page-item"><a class="page-link" href="?page={{ offers_list.number }}">{{ offers_list.number }}</a></li> <!-- OBECNA -->
+                    <li class="page-item"><a class="page-link" href="?page={{ offers_list2.number }}">{{ offers_list2.number }}</a></li> <!-- OBECNA -->
 
-                {% if offers_list.has_next %}
-                    <li class="page-item"><a class="page-link" href="?page={{ offers_list.next_page_number }}">{{ offers_list.next_page_number }}</a></li>
+                {% if offers_list2.has_next %}
+                    <li class="page-item"><a class="page-link" href="?page={{ offers_list2.next_page_number }}">{{ offers_list2.next_page_number }}</a></li>
 
                 {% endif %}
 <!--                <li class="page-item"><a class="page-link" href="#">2</a></li>-->
 <!--                <li class="page-item"><a class="page-link" href="#">3</a></li>-->
 
                 <li class="page-item">
-                    {% if offers_list.has_next %}
-                      <a class="page-link" href="?page={{ offers_list.next_page_number }}" aria-label="Next">
+                    {% if offers_list2.has_next %}
+                      <a class="page-link" href="?page={{ offers_list2.next_page_number }}" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
                       </a>
