--- a/Offers/static/css/style.css
+++ b/Offers/static/css/style.css
@@ -10,6 +10,16 @@ figure, header, nav, section, article, aside, footer, figcaption {
   outline: 0;
 }
 
+.form-login {
+  background-color: #ffffff;
+  height: 250px;
+  width: 300px;
+  margin: auto;
+  border: 1px solid #000000;
+  border-radius: 25px;
+  opacity: 0.85;
+}
+
 #offer-content{
   border-top: 1px solid rgba(35,45,57,0.8);
   padding-top: 1%;
