--- a/Offers/templates/Index/base.html
+++ b/Offers/templates/Index/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load dict %}
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -41,14 +42,20 @@
                             <li><a href="{% url 'jobs' %}">Jobs</a></li>
                             <li><a href="{% url 'about' %}">About us</a></li>
                             {% if user.is_authenticated %}
-                            <li class="dropdown">
-                               <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><b>{{user.username}}</b></a>
+                                {% if request|user_has_company %}
+                                    <li class="dropdown">
+                                       <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><b>{{user.username}}</b></a>
 
-                                    <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="{% url 'profile' %}">Edit profile</a>
-                                        <a class="dropdown-item" href="{% url 'company_profile' %}">Manage offers</a>
-                                    </div>
-                            </li>
+                                            <div class="dropdown-menu">
+                                                <a class="dropdown-item" href="{% url 'profile' %}">Edit profile</a>
+                                                <a class="dropdown-item" href="{% url 'company_profile' %}">Manage offers</a>
+                                            </div>
+                                    </li>
+
+                                {% else %}
+                                     <li><a href="{% url 'register_company' %}">Register Company</a></li>
+
+                                {% endif %}
                             <li><a href="/logout/">Log out</a></li>
                             {% else %}
                             <li><a href="{% url 'login' %}">Log in</a></li>
