--- a/Offers/templates/Index/profile.html
+++ b/Offers/templates/Index/profile.html
@@ -72,7 +72,7 @@
                         <div class="col-sm-6">
 
                             <div class="main-button">
-                    <a href="{% url 'addoffer' %}">Edit your profile</a>
+                    <a href="{% url 'edit_user' %}">Edit your profile</a>
                   </div>
                         </div>
 
