--- a/Offers/templates/registration/register.html
+++ b/Offers/templates/registration/register.html
@@ -34,7 +34,14 @@
                   </ul>
                 {% endif %}
 
-                  <form id="user_register" method="post" action="{% url 'register' %}">
+                  <form method="post" action="{% url 'register' %}" style ="background: #212529AB;
+                                                                          height: 400px;
+                                                                          width: 400px;
+                                                                          margin: auto;
+                                                                          border: 1px solid #000000;
+                                                                          border-radius: 25px;
+                                                                          opacity: 1;
+                                                                          padding-top: 30px;">
                       {% csrf_token %}
 
                         {% if form.errors %}
@@ -51,7 +58,7 @@
                         <br>
                       <!-- {{form.captcha}}  zdubluje sie-->
 
-                      <div class="g-recaptcha" data-sitekey="6LczTeEfAAAAANM3rsBQ63TRXKhcJwHOT0skIhhY" ></div>
+                      <div style="padding-left: 47px" class="g-recaptcha" data-sitekey="6LczTeEfAAAAANM3rsBQ63TRXKhcJwHOT0skIhhY" ></div>
                       <!--<button type="submit" class="btn btn-primary" >Register</button>-->
                       <br>
                        <p><input type="submit" class="btn btn-primary" value="Register"></p>
