--- a/Offers/templates/Offers/search.html
+++ b/Offers/templates/Offers/search.html
@@ -152,39 +152,39 @@
 
             <br>
                 
-            <nav>
-              <ul class="pagination pagination-lg justify-content-center">
-                <li class="page-item">
-                    {% if result.has_previous %}
-                      <a class="page-link" href="?page={{ result.previous_page_number }}" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                        <span class="sr-only">Previous</span>
-                      </a>
-                    {% endif %}
-                </li>
-                {% if result.has_previous %}
-                    <li class="page-item"><a class="page-link" href="?page={{ result.previous_page_number }}">{{ result.previous_page_number }}</a></li>
-                {% endif %}
+<!--            <nav>-->
+<!--              <ul class="pagination pagination-lg justify-content-center">-->
+<!--                <li class="page-item">-->
+<!--                    {% if result.has_previous %}-->
+<!--                      <a class="page-link" href="?page={{ result.previous_page_number }}" aria-label="Previous">-->
+<!--                        <span aria-hidden="true">&laquo;</span>-->
+<!--                        <span class="sr-only">Previous</span>-->
+<!--                      </a>-->
+<!--                    {% endif %}-->
+<!--                </li>-->
+<!--                {% if result.has_previous %}-->
+<!--                    <li class="page-item"><a class="page-link" href="?page={{ result.previous_page_number }}">{{ result.previous_page_number }}</a></li>-->
+<!--                {% endif %}-->
 
-                    <li class="page-item"><a class="page-link" href="?page={{ result.number }}">{{ result.number }}</a></li> <!-- OBECNA -->
+<!--                    <li class="page-item"><a class="page-link" href="?page={{ result.number }}">{{ result.number }}</a></li> &lt;!&ndash; OBECNA &ndash;&gt;-->
 
-                {% if result.has_next %}
-                    <li class="page-item"><a class="page-link" href="?page={{ result.next_page_number }}">{{ result.next_page_number }}</a></li>
-                {% endif %}
-<!--                <li class="page-item"><a class="page-link" href="#">2</a></li>-->
-<!--                <li class="page-item"><a class="page-link" href="#">3</a></li>-->
+<!--                {% if result.has_next %}-->
+<!--                    <li class="page-item"><a class="page-link" href="?page={{ result.next_page_number }}">{{ result.next_page_number }}</a></li>-->
+<!--                {% endif %}-->
+<!--&lt;!&ndash;                <li class="page-item"><a class="page-link" href="#">2</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                <li class="page-item"><a class="page-link" href="#">3</a></li>&ndash;&gt;-->
 
-                <li class="page-item">
-                    {% if result.has_next %}
-                      <a class="page-link" href="?page={{ result.next_page_number }}" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                        <span class="sr-only">Next</span>
-                      </a>
-                    {% endif %}
-                </li>
+<!--                <li class="page-item">-->
+<!--                    {% if result.has_next %}-->
+<!--                      <a class="page-link" href="?page={{ result.next_page_number }}" aria-label="Next">-->
+<!--                        <span aria-hidden="true">&raquo;</span>-->
+<!--                        <span class="sr-only">Next</span>-->
+<!--                      </a>-->
+<!--                    {% endif %}-->
+<!--                </li>-->
 
-              </ul>
-            </nav>
+<!--              </ul>-->
+<!--            </nav>-->
 
         </div>
     </section>
