bez contact us, about us, drobne zmiany

--- a/Offers/templates/Offers/search.html
+++ b/Offers/templates/Offers/search.html
@@ -35,11 +35,11 @@
 
                          <h5 style="margin-bottom: 15px">Salary</h5>
 
+
                          <div>
                               <label>
                                   <span>Min. </span>
-                                   <input type="number" name="min_pay_html" placeholder={{ request.GET.get('min_pay_html') }}>
-
+                                   <input type="number" name="min_pay_html" >
                               </label>
                          </div>
 
