--- a/Offers/templates/Index/edit_offer.html
+++ b/Offers/templates/Index/edit_offer.html
@@ -22,7 +22,15 @@
 
     <!-- ***** Features Item Start ***** -->
     <section>
-        <div class="text-center">
+        <div class="text-center" style="background: #212529AB;
+                                              height: 700px;
+                                              width: 500px;
+                                              margin: auto;
+                                              border: 1px solid #000000;
+                                              border-radius: 25px;
+                                              opacity: 1;
+                                              padding-top: 10px;
+                                              margin-top: 15px; ">
             <br>
             <br>
 
