--- a/Offers/templates/Index/addoffer.html
+++ b/Offers/templates/Index/addoffer.html
@@ -34,7 +34,7 @@
                                               border: 1px solid #000000;
                                               border-radius: 25px;
                                               opacity: 1;
-                                              padding-top: 30px";>
+                                              padding-top: 30px;">
                 <h2>Add new offer</h2>
                 <br>
               {% csrf_token %}
